Desktop view CSS file update.

--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 
 /* || REST */
 * {
@@ -52,7 +51,6 @@ img {
   --INPUT-DSK: normal 1rem/1.75rem var(--FF);
   --STATUS-DSK: normal 0.8125rem/1.75rem var(--FF);
 }
-
 
 /* || UTILITY CLASSES */
 .offscreen {
@@ -172,7 +170,6 @@ input[type="email"]:focus {
   position: absolute;
   right: 0px;
   top: 0px;
-  /* transform: translateY(-50%); */
   background-image: var(--BUTTON-DEFAULT-GRAD);
   border: none;
   padding: 0.9375rem 1.6975rem 0.9581rem 1.75rem;
@@ -204,3 +201,96 @@ input[type="email"]:focus {
   cursor: not-allowed;
 }
 
+@media screen and (min-width: 992px) {
+  body {
+    overflow: hidden;
+
+    display: flex;
+    align-items: center;
+  }
+
+  /* HEADER */
+  .section-wrapper {
+    padding: 4.6819rem 13.75rem 9.5rem 10.3125rem;
+  }
+
+  .header {
+    margin-bottom: 136.09px;
+  }
+
+  .header__logo {
+    width: 0px;
+    padding: 0px;
+  }
+
+  .header__logo img {
+    max-width: 158px;
+  }
+
+  .header__mobile-hero {
+    display: none;
+  }
+
+  /* || MAIN */
+  .main-content {
+    margin: 0px;
+    align-items: flex-start;
+  }
+
+  .main-content__title {
+    font: var(--TITLE-DSK);
+    letter-spacing: var(--TITLE-LS-DSK);
+    margin-bottom: 2rem;
+    max-width: 444px;
+    text-align: left;
+  }
+
+  .main-content__title span {
+    font: var(--TITLE-SPAN-DSK);
+  }
+
+  .main-content__description {
+    font: var(--DESCRIPTION-DSK);
+    max-width: 444px;
+    margin-bottom: 2.5rem;
+    text-align: left;
+  }
+
+  .rsvpForm__wrapper {
+    max-width: 445px;
+  }
+
+  input[type="email"] {
+    padding: .9375rem calc(116px + 24px + 12px) .8125rem 2rem;
+    font: var(--INPUT-DSK);
+  }
+
+  .rsvpForm__button {
+    padding: 1.1875rem 2.8225rem 1.2081rem 2.875rem;
+  }
+
+  .rsvpForm__status-icon {
+    right: 116px;
+  }
+
+  .status-message {
+    font: var(--STATUS-DSK);
+    margin-top: 0.25rem;
+    margin-left: 2rem;
+  }
+
+  .footer__desktop-hero {
+    display: block;
+    width: 42.36%;
+    min-height: 100vh;
+    overflow: hidden;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
+
+  .footer__desktop-hero img {
+    min-height: 100vh;
+    width: 100%;
+  }
+}
